@@ -1,3 +1,8 @@
+2009-12-20  Rudy Neeser  <rudy.neeser@gmail.com>
+
+	* binary-heap.lisp (add-to-heap, add-all-to-heap): Fixed a bug in
+	updating the size of the DATA array in the BINARY-HEAP class.
+
 2009-06-18  Rudy Neeser  <rudy.neeser@gmail.com>
 
 	* fibonacci-heap.lisp (pop-heap): Fixed a bug which created an
